--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
     "axios": "^1.7.7",
     "lucide-react": "^0.461.0",
     "next": "^15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.14"
