--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hansterhub",
+  "name": "hamsterhub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
   }
